--- a/main.scss
+++ b/main.scss
@@ -314,6 +314,10 @@ $color-black: #000;
     background-color: #F7F7F7;
     margin-top: -7.3rem;
     text-align: center;
+
+    h2{
+        margin-top: 15rem;
+    }
    
 }
 .cart{
